# poet_task

./: README.md  pyproject.toml
poet_task/: __init.py__  script.py
