[tool.poetry]
name = "poet-task"
version = "0.1.0"
description = ""
authors = ["Susan Joshi <susan.joshi@cloudfactory.com>"]
readme = "README.md"
packages = [{include = "poet_task"}]

[tool.poetry.dependencies]
python = "^3.11"
emoji = "^2.2.0"
fire = "^0.5.0"

[tool.poetry.scripts]
please = 'script:main'
world = 'script:hello_world'
hey = 'poet_tasks:hey'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
